fixed icon misalign

--- a/styles.css
+++ b/styles.css
@@ -234,7 +234,7 @@ label {
         height: 25px;
         width: 30px;
 
-        display: block;
+        display: flex;
         
         justify-content: center;
         align-items: center;
@@ -246,8 +246,6 @@ label {
 
     .copy-img {
         width: 22px;
-
-        margin: 1px 0px 1px -2px;
 
         object-fit: cover;
     }
@@ -360,7 +358,7 @@ label {
         height: 25px;
         width: 30px;
 
-        display: block;
+        display: flex;
         
         justify-content: center;
         align-items: center;
@@ -372,8 +370,6 @@ label {
 
     .copy-img {
         width: 22px;
-
-        margin: 1px 0px 1px -2px;
 
         object-fit: cover;
     }
